feat: add opening hours endpoint
