# swagger.yml
@@ -1,4 +1,3 @@
-#file: noinspection SwYamlUnresolvedReferencesInspection
 openapi: "3.0.0"
 info:
   title: "SKS-Scrapper"
@@ -82,7 +81,7 @@ components:
           example: "80845fe1a68deadbb4febc3f6dbae98b64a3df7a1648edd417a8ece3164182f4"
         meal_id:
           type: "number"
-          example: 502
+          example: 398
         size:
           type: "string"
           example: "200g/10g"
@@ -100,7 +99,7 @@ components:
       properties:
         id:
           type: "number"
-          example: 715
+          example: 151
         name:
           type: "string"
           example: "Frytki z batatów"
@@ -359,8 +358,38 @@ paths:
                 error: "Some error message"
           description: "Returns **500** (Internal Server Error) as **application/json**"
       security: []
+  /api/v1/info:
+    get:
+      summary: " (openingHours)"
+      description: "\n\n _app/controllers/info_controller.ts_ - **openingHours**"
+      parameters: []
+      tags:
+        - "INFO"
+      responses:
+        200:
+          description: "OK"
+          content:
+            application/json: {}
+      security: []
+  /api/v1/healthcheck:
+    get:
+      summary: "route"
+      description: "\n\n __ - ****"
+      parameters: []
+      tags:
+        - "HEALTHCHECK"
+      responses:
+        200:
+          description: "OK"
+          content:
+            application/json: {}
+      security: []
 tags:
   - name: "MEALS"
     description: "Everything related to MEALS"
   - name: "SKS-USERS"
     description: "Everything related to SKS-USERS"
+  - name: "INFO"
+    description: "Everything related to INFO"
+  - name: "HEALTHCHECK"
+    description: "Everything related to HEALTHCHECK"
